--- a/ListTest2/AndroidManifest.xml
+++ b/ListTest2/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gras.listtest"
+    package="com.gras.listtest2"
     android:versionCode="1"
     android:versionName="1.0" >
+	
+	<uses-permission android:name="android.permission.READ_CONTACTS" />
     
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.gras.listtest.MainActivity"
+            android:name="com.gras.listtest2.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
