--- a/NestedFragments/AndroidManifest.xml
+++ b/NestedFragments/AndroidManifest.xml
@@ -25,6 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="TaskAssignent"></activity>
+        <activity android:name="Dummy"></activity>
     </application>
 
 </manifest>
