--- a/NestedFragments/bin/AndroidManifest.xml
+++ b/NestedFragments/bin/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
         <activity android:name="TaskAssignent"></activity>
         <activity android:name="Dummy"></activity>
+        <activity android:name="TaskDetailsActivity"></activity>
     </application>
 
 </manifest>
