--- a/NestedFragments/AndroidManifest.xml
+++ b/NestedFragments/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity android:name="com.example.newspinproj.MainActivity"></activity><activity
-            android:name="Dummy"
+            android:name="Login"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
